gccida/c2/reposition_prologue_and_epilogue_notes
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8359:4: error: expected ';' after expression
rtx last_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8359:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8360:4: error: expected ';' after expression
rtx j; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8360:5: error: use of undeclared identifier 'j'
rtx j; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8361:4: error: expected ';' after expression
rtx v31; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8361:5: error: use of undeclared identifier 'v31'
rtx v31; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8418:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( __int64)rtx[2]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8437:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v20 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8460:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v20 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8542:1: error: use of undeclared identifier 'last_insn'
last_insn = get_last_insn( ); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8543:7: error: use of undeclared identifier 'last_insn'
if ( !last_insn ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8545:1: error: use of undeclared identifier 'j'
j = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8546:1: error: use of undeclared identifier 'v31'
v31 = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8549:17: error: use of undeclared identifier 'last_insn'
if ( *( _WORD *)last_insn != 32 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8551:17: error: use of undeclared identifier 'last_insn'
if ( *( _WORD *)last_insn == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8553:6: error: use of undeclared identifier 'last_insn'
if ( last_insn[2].fld[0].rtint == -89 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8554:1: error: use of undeclared identifier 'j'
j = last_insn; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8554:5: error: use of undeclared identifier 'last_insn'
j = last_insn; 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/function.c:8562:6: error: use of undeclared identifier 'last_insn'
if ( last_insn->fld[0].rtint == epilogue->data.i[v51] ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reposition_prologue_and_epilogue_notes/src/obj/function.o] Error 1
